style.css
body{
    margin: 0;
    background-image: url(./img/background-images.webp);
}

.navi-container{
    display: flex;
    justify-content: space-around;
    background-color: plum;
    padding: 10px;
  
}

.navi-container img{
    max-width: 200px;
}

.links{
    display: flex;
    align-items: center;
}
.links ul{
    display: flex;
    list-style: none;
    gap: 10px;
    margin: 0;
    padding: 0;
}

.hero-container{
    background-color: plum;
    border-radius: 50px;
    margin:25px 50px;
    padding: 50px;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

.left-hero{
    display: flex;
    flex-direction: column;
    gap: 10px;
    width: 500px;
}

.main-text{
    font-size: 48px;
    font-weight: bold;
    color: darkmagenta;
}

.sub-text{
    font-size: 18px;
    color: yellow;
}

.hero-container img {
    object-fit: contain;
    max-width: 100%;
}

.info-container{
    border-radius: 50px;
    margin: 25px 25px;
    width: auto;
    height: 400px;
    background: plum;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
}

h2{
    color: darkmagenta;
    font-size: 38px;
}

.info-element{
    color: yellow;
    display: flex;
    gap: 20px;
}

.info-content{
    font-size: 18px;
}

.info-container img{
    width: 200px;
    height: 200px;
}


.qoute-container{
    display: flex;
    justify-content: center;
    margin: 25px 25px;
}

.blockqoute{
    max-width: 600px;
    margin: 10px 30px;
    padding: 25px;
    background: plum;
    border: 1px solid darkmagenta;
}

.text-qoute{
    font-family: "Gelasio",serif;
    font-style: italic;
    font-size: 1.15em;
    line-height: 1.5;
    color: yellow;
}

.author-qoute{
    font-weight: bold;
    font-style: normal;
    text-align: right;
}

.author-qoute::before{
    content: "\2014";
}

.action-container{
    margin: 10px 30px;
    padding: 25px;
}

.action-content{
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    margin: 10px 100px;
    padding: 25px;
    background: plum;
    border: 1px solid darkmagenta;
}

.action-main{
    color: darkmagenta;
    font-size: 38px;
}

.action-sub{
    color: yellow;
}

.footer{
    display: flex;
    justify-content: center;
    background: plum;
    
    padding: 10px;

}

*{
    
    font-size: 18px;
    font-family: Verdana, "Geneva", Tahoma, sans-serif;
}

button {
    outline-color: transparent;
}

